Page MenuHome GnuPG

Kleopatra: restart gpg-agent after stopping it
Closed, ResolvedPublic

Description

Every now and then we see issues arising from a missing gpg-agent. It may fail to start again after "restart background processes" (or "gpgconf --kill all") e.g. if there are no certificates in the certificate list. But there are other occurrences as well.

I think we should not rely on gpg starting the agent again anyway but do it explicitly when doing "restart background processes".

This is a follow up to T5775: Kleopatra: Add action to restart background processes. It probably would make T6567: Kleopatra: gpg-agent does not restart when trying to access smart card obsolete, as Kleopatra users usually do not stop processes with the Cli we only need to cover "restart background processes" here.

Event Timeline

aheinecke added a subscriber: aheinecke.

this should be easy since we already start gpg-agent on start

ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ikloecker changed the task status from Open to Testing.Mar 12 2024, 10:37 AM

Done.

Backported to VSD 3.2

restarting gpg-agent works in release version 3.2.2

ebo edited projects, added vsd32 (vsd-3.2.0); removed vsd32.

forgot to keep it open for test with gpg 2.4 branch versions...

To clarify: this works for "Restart background processes" only, as was the aim of this ticket

ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.May 19 2025, 11:47 AM
timegrid closed this task as Resolved.EditedMay 20 2025, 3:31 PM
timegrid moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
timegrid added a subscriber: timegrid.

looks good to me on gpg4win-4.4.1-beta59@win10

after Get-Process gpg-agent | Stop-Process -force, the gpg-agent process is started reliably via Restart Background Processes (tested 6 times)