Restart gpg-agent instead of just shutting down all GnuPG daemons

Restarting the gpg-agent explicitly after shutting down the GnuPG daemons
is much safer than relying on the agent being started on demand.

GnuPG-bug-id: 7021
(cherry picked from commit bc51bb7f15af3304692440bbfe29325335eb391b)